Style refactoring, init of dummy reservation slots

--- a/resources/private/calendar-view/calendar-view.html
+++ b/resources/private/calendar-view/calendar-view.html
@@ -27,8 +27,8 @@
               </div>
               <!-- /ko -->
               <!-- ko foreach: slots -->
-              <div class="reserved-slot" data-bind="click: $root.clickHandler.bind($parent, 'reserved-slot', $data),
-                                                    style: { top: positionTop, height: height }, text: viewText"></div>
+              <div class="reservation-slot" data-bind="click: $root.clickHandler.bind($parent, 'reservation-slot', $data),
+                                                       style: { top: positionTop, height: height }, text: viewText"></div>
               <!-- /ko -->
             </div>
           </td>
