Julkipano and application verdicts template styling fixes.

--- a/resources/private/application/application.html
+++ b/resources/private/application/application.html
@@ -1066,7 +1066,7 @@
                                                               <tr>
                                                                   <td data-bind='dateString: $data.maaraysaika'></td>
                                                                   <!-- <td data-bind='dateString: toteutusHetki'></td> -->
-                                                                  <td data-bind='text: $data.sisalto'></td>
+                                                                  <td data-bind='text: $data.sisalto' class="verdict-text"></td>
                                                               </tr>
                                                           </tbody>
                                                       </table>
