--- a/resources/private/ui-components/docgen/group/docgen-group-template.html
+++ b/resources/private/ui-components/docgen/group/docgen-group-template.html
@@ -20,6 +20,7 @@
                                                 i18npath: i18npath,
                                                 applicationId: applicationId,
                                                 documentId: documentId,
+                                                authModel: $component.authModel,
                                                 service: $component.service }}">
         </span>
       <!-- /ko -->
@@ -42,6 +43,7 @@
                                                                    i18npath: $data.i18npath,
                                                                    applicationId: $data.applicationId,
                                                                    documentId: $data.documentId,
+                                                                   authModel: $component.authModel,
                                                                    service: $component.service }}">
 
       </div>
