--- a/resources/private/authority-admin/resource-calendar-admin.html
+++ b/resources/private/authority-admin/resource-calendar-admin.html
@@ -23,9 +23,14 @@
     </div>
     <div class="dialog-content">
       <div data-bind="with: $root.calendars.newReservationSlotModel">
-        <span data-bind="text: weekdayStr"></span>
-        ooo
-        <span data-bind="text: startTime"></span>
+        <p>Lisätään varattavia aikoja päivälle <span data-bind="text: weekdayStr"></span>
+        alkaen klo
+        <span data-bind="text: startTime"></span></p>
+        <p>Tapahtumalajit:</p>
+        <p><input type="checkbox" />Katselmus</p>
+        <p><input type="checkbox" />Suunnittelukokous</p>
+        <p><input type="checkbox" />Tapaaminen</p>
+        <button data-bind="click: execute, ltext: 'save'" class="btn btn-primary btn-dialog close"></button>
       </div>
     </div>
   </div>
