--- a/resources/private/stamp/stamp-template.html
+++ b/resources/private/stamp/stamp-template.html
@@ -84,7 +84,7 @@
                 <div class="col--vertical checkbox-wrapper"
                      data-bind="css: {'checkbox-wrapper--disabled': status() !== statusReady}">
                   <input data-bind="checked: includeBuildings,
-                                    disabled: status() !== statusReady"
+                                    disable: status() !== statusReady"
                          type="checkbox" 
                          class="form-input"
                          id="stamp-info-include-buildings"/>
