--- a/resources/private/stamp/stamp-template.html
+++ b/resources/private/stamp/stamp-template.html
@@ -26,9 +26,9 @@
               <div class="col-1">
                 <label data-bind="ltext: 'stamp.text'"></label>
                 <input data-bind="value: text, enable: status() === statusReady"
-                          type="text"
-                          class="text"
-                       data-test-id="stamp-info-text"/>
+                       type="text"
+                       class="text"
+                       data-test-id="stamp-info-text">
               </div>
 
               <div class="col-1">
@@ -37,24 +37,24 @@
                             datepicker: date,
                             enable: status() === statusReady,
                             valueUpdate: 'afterkeydown'"
-                          type="text"
-                          class="text"
-                       data-test-id="stamp-info-date"/>
+                       type="text"
+                       class="text"
+                       data-test-id="stamp-info-date">
               </div>
 
               <div class="col-1">
                 <label data-bind="ltext: 'stamp.organization'"></label>
                 <input data-bind="textInput: organization, enable: status() === statusReady"
-                          type="text"
-                          class="text"/
+                       type="text"
+                       class="text"
                        data-test-id="stamp-info-organization">
               </div>
 
               <div class="col-1">
                 <label data-bind="ltext: 'stamp.text.extra'"></label>
                 <input data-bind="value: extraInfo, enable: status() === statusReady"
-                          type="text"
-                          class="text"/
+                       type="text"
+                       class="text"
                        data-test-id="stamp-info-extratext">
               </div>
 
@@ -76,7 +76,7 @@
                 <input data-bind="textInput: section, enable: status() === statusReady"
                        type="text"
                        class="text"
-                       data-test-id="stamp-info-section"/>
+                       data-test-id="stamp-info-section">
               </div>
 
               <div class="col-2">
@@ -87,7 +87,7 @@
                                     disable: status() !== statusReady"
                          type="checkbox" 
                          class="form-input"
-                         id="stamp-info-include-buildings"/>
+                         id="stamp-info-include-buildings">
                   <label data-bind="ltext: 'stamp.include-buildings'" class="inline-label checkbox-label" for="stamp-info-include-buildings"></label>
                 </div>
               </div>
@@ -101,8 +101,8 @@
                 <input data-bind="textInput: xMargin,
                             enable: status() === statusReady,
                             css: {'invalid-margin': !xMarginOk()}"
-                          type="text"
-                          class="text"/
+                       type="text"
+                       class="text"/
                        data-test-id="stamp-info-xmargin">
               </div>
 
@@ -111,9 +111,9 @@
                 <input data-bind="textInput: yMargin,
                             enable: status() === statusReady,
                             css: {'invalid-margin': !yMarginOk()}"
-                          type="text"
-                          class="text"
-                       data-test-id="stamp-info-ymargin"/>
+                       type="text"
+                       class="text"
+                       data-test-id="stamp-info-ymargin">
               </div>
 
               <div class="col-1">
