Refactored UI code, showing reservation slots in the calendar view

--- a/resources/private/authority-admin/resource-calendar-admin.html
+++ b/resources/private/authority-admin/resource-calendar-admin.html
@@ -23,9 +23,7 @@
     </div>
     <div class="dialog-content">
       <div data-bind="with: $root.calendars.newReservationSlotModel">
-        <p>Lisätään varattavia aikoja päivälle <span data-bind="text: weekdayStr"></span>
-        alkaen klo
-        <span data-bind="text: startTime"></span></p>
+        <p>Lisätään varattavia aikoja alkaen klo <span data-bind="text: startTime"></span></p>
         <p>Tapahtumalajit:</p>
         <p><input type="checkbox" />Katselmus</p>
         <p><input type="checkbox" />Suunnittelukokous</p>
