--- a/resources/private/calendar-view/calendar-view.html
+++ b/resources/private/calendar-view/calendar-view.html
@@ -10,24 +10,24 @@
     -->
 
     <div class="weekview-table">
-      <h3><span data-bind="text: name"></span> (<span data-bind="text: organization"></span>) </h3>
+      <h3 data-bind="with: calendar"><!--ko text: name --><!--/ko--> (<!--ko text: organization --><!--/ko-->) </h3>
       <table>
         <thead>
-        <tr data-bind="foreach: weekdays">
+        <tr data-bind="foreach: calendarWeekdays">
           <th data-bind="text: str"></th>
         </tr>
         </thead>
         <tbody>
-        <tr data-bind="foreach: weekdays">
+        <tr data-bind="foreach: calendarWeekdays">
           <td>
             <div style="position: relative;">
-              <!-- ko foreach: $parent.timelineTimes -->
-              <div class="timeline-slot" data-bind="click: $root.clickHandler.bind($parent, 'timeline-slot', $data)">
-                <span data-bind="text: $data"></span>
+              <!-- ko foreach: $root.timelineTimes -->
+              <div class="timeline-slot" data-bind="click: $root.clickHandler.bind({ slot: $data, weekday: $parent }, 'timeline-slot')">
+                <!--ko text: viewText --><!--/ko-->
               </div>
               <!-- /ko -->
               <!-- ko foreach: slots -->
-              <div class="reservation-slot" data-bind="click: $root.clickHandler.bind($parent, 'reservation-slot', $data),
+              <div class="reservation-slot" data-bind="click: $root.clickHandler.bind({ slot: $data, weekday: $parent }, 'reservation-slot'),
                                                        style: { top: positionTop, height: height }, text: viewText"></div>
               <!-- /ko -->
             </div>
