--- a/resources/private/authority-admin/resource-calendar-admin.html
+++ b/resources/private/authority-admin/resource-calendar-admin.html
@@ -32,6 +32,15 @@
       </div>
     </div>
   </div>
+
+  <div id="dialog-edit-slot" class="window autosized">
+    <div class="dialog-header">
+      <p data-bind="ltext: 'auth-admin.resource.calendar.edit-slot'"></p>
+      <p class="dialog-close close lupicon-remove"></p>
+    </div>
+    <div class="dialog-content">
+    </div>
+  </div>
 </section>
 </body>
 </html>
