--- a/resources/private/authority-admin/resource-calendar-admin.html
+++ b/resources/private/authority-admin/resource-calendar-admin.html
@@ -25,9 +25,9 @@
       <div data-bind="with: $root.calendars.newReservationSlotModel">
         <p>Lisätään varattavia aikoja alkaen klo <span data-bind="text: startTime"></span></p>
         <p>Tapahtumalajit:</p>
-        <p><input type="checkbox" />Katselmus</p>
-        <p><input type="checkbox" />Suunnittelukokous</p>
-        <p><input type="checkbox" />Tapaaminen</p>
+        <div data-bind="foreach: ['Katselmus','Suunnittelukokous','Tapaaminen']">
+          <p><input type="checkbox" data-bind="checkedValue: $data, checked: $parent.services"><span data-bind="text: $data"/></p>
+        </div>
         <button data-bind="click: execute, ltext: 'save'" class="btn btn-primary btn-dialog close"></button>
       </div>
     </div>
