--- a/resources/private/bulletins/application-bulletin/application-bulletin-template.html
+++ b/resources/private/bulletins/application-bulletin/application-bulletin-template.html
@@ -6,7 +6,7 @@
 
       <div class="application_summary">
         <div class="container">
-          <div class="preamble">
+          <div class="bulletin-preamble">
             <div class="application_summary_info" data-bind="with: bulletin">
               <h4 data-bind="text: address" data-test-id="bulletin-address"></h4>
               <h5 data-bind="if: primaryOperation">
