--- a/resources/private/integration-error/integration-error.html
+++ b/resources/private/integration-error/integration-error.html
@@ -9,8 +9,8 @@
        <p class="dialog-close close lupicon-remove"></p>
       </div>
       <div class="dialog-content">
-        <p class="" data-bind="ltext: text"></p>
-        <p class="" data-bind="if: details && details()"><textarea readonly="readonly" style="height: 200px;width:100%" data-bind="value:details"></textarea></p>
+        <p class="" data-bind="lhtml: text"></p>
+        <p class="" data-bind="if: details && details()"><textarea readonly="readonly" style="height:200px;width:600px" data-bind="value:details"></textarea></p>
       </div>
       <div style="text-align:center"><button class="btn btn-primary btn-dialog close" data-test-id="confirm-yes" style="position:relative">OK</button></div>
     </div>
